# cubetimer

./: COPYING  Makefile  README.md  meson.build  xyz.aguno.CubeTimer.json  xyz.aguno.CubeTimer.json~
data/: meson.build  xyz.aguno.CubeTimer.appdata.xml.in  xyz.aguno.CubeTimer.desktop.in  xyz.aguno.CubeTimer.gschema.xml
data/icons/: meson.build
debian/: changelog  control  rules
po/: POTFILES  meson.build
snap/: snapcraft.yaml
src/: cubetimer.gresource.xml  cubetimer.in  main.py  meson.build  style.css  window.cmb  window.py  window.ui
